--- a/_posts/2022-03-08-spark-rdd.md
+++ b/_posts/2022-03-08-spark-rdd.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "좌충우돌 Spark 배우기 - Spark RDD"
-categories: querybook
+categories: spark
 author: "Yongchan Hong"
 ---
 
@@ -18,7 +18,7 @@ Spark의 기본 근간이 되는 RDD이기에 더욱 주의 깊게 공부해 보
 lines = sc.textFile(f"file://Users/Chan/repo/example.csv")
 ```
 
-2. Resilient & Immutable
+2. Resilient & Immutable  
 노드 중 하나가 장애 등의 이유로 망가지더라도 데이터가 변하지 않아 (Immutable) 사라지거나 손상된 파티션의 연산을 다시 실행하며 복원이 가능하다. RDD의 경우 변환과정에서 Acyclic Graph를 그리며 RDD 자체가 연산에서 변경되는게 아니라 새로운 RDD를 제작한다. 따라서, 연산중 문제가 생기면 다시 복원 후 연산을 하면 된다. 
 
 3. Type-Safe  
