--- a/_posts/2022-03-25-db-review-1.md
+++ b/_posts/2022-03-25-db-review-1.md
@@ -7,6 +7,12 @@ author: "Yongchan Hong"
 # DB Review (1)
 이미 DDIA책, 수업 등의 경험으로 DB에 대한 지식을 어느정도 갖췄지만, 기본적인 거를 정리할 겸 블로그를 사용하고자 한다. 큰 컨셉들을 정리하고 생각해보는 시간을 갖출 것이다. 이 내용은 추후 더 정리하거나 추가될 수도 있다.
 
+## Why Not File System
+파일 시스템을 그대로 쓰기엔 단점이 너무 많다..Data Redundancy issue, Concurrent한 접속시 inconsistency, Security 이슈 등이 있다.
+
+## Query Processing
+Query Input -> Parsing and Translation (Relational Algebra Execution) -> Optimizer (Execution Plan) -> Evaluator -> Query Output
+
 ## DBMS
 DBMS는 database 관리 시스템으로 데이터에 관한 정보를 효율적이고 효과적이게 검색하고 저장하게 해준다. DBMS는 데이터 중복을 제어해주고, 데이터 백업/복구를 제공하며 사용자 인터페이스를 제공합니다.
 > Database는 데이터가 저장되고 정렬된 데이터 collection이다  
