--- a/_posts/2022-03-29-docker.md
+++ b/_posts/2022-03-29-docker.md
@@ -92,3 +92,8 @@ services:
 다음과 같은 예시를 보면 프런트엔드와 백엔드 두개의 컨테이너를 하나의 서비스를 띄운다는 것을 어렴풋이 알 수 있다. 여기서 포트 번호와 build할 context와 dockerfile, 그리고 환경변수도 지정해 줄 수 있다. 이 외에도 volumes를 통해 컨테이너에 volume을 mount할 수 있다.   
 
 docker-compose up을 통해 실행할 수 있고, -d flag를 통해 백그라운드 실행, --force-recreate을 통해 컨테이너 새로 만들기, --build를 통해 도커 이미지를 다시 빌드하고 compose할 수 있다 (docker compose build를 먼저 하기도 한다)
+
+## Reference
+https://www.youtube.com/watch?v=IiNI6XAYtrs  
+https://wooono.tistory.com/12d  
+https://geekflare.com/docker-vs-virtual-machine/
