--- a/_posts/2023-04-03-atlantis.md
+++ b/_posts/2023-04-03-atlantis.md
@@ -7,7 +7,7 @@ author: "Yongchan Hong"
 
 # Atlantis
 
-![logo](../images/atlantis_logo.png)
+![logo](/data-summary-blog.github.io/images/atlantis_logo.png)
 
 ## What is Atlantis
 
@@ -51,7 +51,7 @@ IAM role for Atlantis will be created using IRSA (IAM role for service account).
 
 IAM role for terraform should be created on each AWS accounts. The role should be similar to AdministratorAccess, since Atlantis should create multiple resources.
 
-![process](../images/atlantis_process.png)
+![process](/data-summary-blog.github.io/images/atlantis_process.png)
 
 Inside Atlantis helm chart, you can set `serviceAccount.create` to `true` and provide annotations of `[eks.amazonaws.com/role-arn](http://eks.amazonaws.com/role-arn)` , which will be ARN of IAM role for Atlantis.
 
@@ -144,7 +144,7 @@ terraform {
 
 Now type atlantis plan/apply.
 
-![example](../images/atlantis_example.png)
+![example](/data-summary-blog.github.io/images/atlantis_example.png)
 
 Voila! Now you can use Atlantis! You will use atlantis plan and apply for most of the times, but you can check [docs](https://www.runatlantis.io/docs/using-atlantis.html) for other commands.
 
